[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]


[project]
name = "qdagview"
version = "0.1.0"
description = "Direct Acyclic Graph View, following the QT's Model-View architecture."
authors = [
    {name = "Andras Zalavari", email = "zalavariandris@gmail.com.com"}
]
readme = "README.md"
keywords = ["python", "livecode", "livecoding"]
requires-python = ">=3.8"

dependencies = [
    "QtPy",
    "PyQt6",
    "numpy ~= 2.1.0",
    "humanize ~= 4.11.0",
    "networkx == 3.4.2",
    "bidict"
]
